# vote-secure

./: .gitmodules  CMakeLists.txt  endian_number.h  exchange_item.h  main.cpp  mpc_service.cpp  mpc_service.h  talliers_network.cpp  talliers_network.h  utils.cpp  utils.h
